<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="@string/title_activity_miui_notification_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:text="@string/des_mnb" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/setBlurRadius_mnb"
            />
        <EditText
            android:id="@+id/mnb_setBlurRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="number"
            android:text="@string/mnb_BR"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/addBlendLayer1_mnb"
            />
        <EditText
            android:id="@+id/mnb_addBlendLayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="numberSigned"
            android:text="@string/mnb_BL1"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/addBlendLayer2_mnb"
            />
        <EditText
            android:id="@+id/mnb_addBlendLayer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="numberSigned"
            android:text="@string/mnb_BL2"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mnb_goTest"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/saveRules"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mnb_restartUI"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/restartSystemui"/>

    </LinearLayout>
</ScrollView>